# summon-ts

./: .eslintrc.cjs  .npmignore  .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: test.yml
circuit/: isLarger.ts  main.ts  summon.d.ts
src/: compileError.ts  index.ts  types.ts  utils.ts  wasmLib.ts
src/helpers/: never.ts
tests/: summon.test.ts
tests/helpers/: blockTrim.ts
wasm/: Cargo.toml  build.ts
wasm/src/: lib.rs
