[package]
name = "summon_ts_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
summon_compiler = { git = "https://github.com/voltrevo/summon", rev = "a91ead6" }
serde-wasm-bindgen = "0.6.5"
web-sys = { version = "0.3.4" }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
