[package]
name = "summon_ts_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
summon_compiler = { git = "https://github.com/voltrevo/summon", rev = "59bc524" }
boolify = { git = "https://github.com/voltrevo/boolify", rev = "84d68ed" }
serde-wasm-bindgen = { version = "0.6.5", serialize_maps_as_objects = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.4" }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
